--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Welcome to My Site</title>
-  </head>
-  <body>
-    <h1>Hello, world! test 3</h1>
-    <p>This is my GitHub Pages website.</p>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>John Elder - Professor of Finance</title>
+</head>
+<body>
+  <h1>John Elder</h1>
+  <h2>Professor of Finance</h2>
+  <p>Email: john.elder@colostate.edu</p>
+  <p>Department of Finance & Real Estate<br>
+     Colorado State University<br>
+     1272 Campus Delivery<br>
+     Fort Collins, CO 80523-1272</p>
+
+  <h3>About</h3>
+  <p>John Elder is a Professor of Finance at Colorado State University. His research is available on Google Scholar. He has served in editorial roles at several journals and worked with investment managers and credentialing organizations for over 20 years.</p>
+
+  <h3>Education & Credentials</h3>
+  <ul>
+    <li>PhD in Financial Economics, University of Virginia</li>
+    <li>CFA Charterholder</li>
+    <li>FRM Designation</li>
+  </ul>
+
+  <h3>Awards</h3>
+  <ul>
+    <li>College UG Teaching Award (2021)</li>
+    <li>College Service Award (2016)</li>
+    <li>College Research Award (2012)</li>
+    <li>Springer Editorial Distinction Awards (2025)</li>
+    <li>Dean's Scholar (multiple years)</li>
+  </ul>
+
+  <h3>Selected Research</h3>
+  <ul>
+    <li>Corporate Governance and Liquidity – JFQA, 2010</li>
+    <li>Liquidity and Information Flow – JMCB, 2013</li>
+    <li>Oil Price Uncertainty – JMCB, 2010</li>
+    <li>Flexible Bivariate Count Models – JBES, 2012</li>
+    <li>Inflation Uncertainty – JMCB, 2004</li>
+  </ul>
+
+  <h3>Course & Resource Links</h3>
+  <ul>
+    <li>Resources for R</li>
+    <li>Student Managed Funds</li>
+    <li>CFA Institute & Denver Chapter</li>
+    <li>Financial Risk Manager (GARP)</li>
+    <li>CFP Board</li>
+  </ul>
+
+  <h3>Other Interests</h3>
+  <ul>
+    <li>Colorado Master Swimming</li>
+    <li>14ers.org</li>
+    <li>Motorcycles: BMW R1200 GS, Honda CB1100F</li>
+    <li>Nature Conservancy</li>
+  </ul>
+
+  <footer>
+    <p><em>Disclaimer: Views expressed are those of the author and not Colorado State University.</em></p>
+  </footer>
+</body>
 </html>
