--- a/index.html
+++ b/index.html
@@ -3,63 +3,139 @@
 <head>
   <meta charset="UTF-8">
   <title>John Elder - Professor of Finance</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      background-color: #f8f8f8;
+    }
+    table {
+      width: 80%;
+      border-collapse: collapse;
+      margin-bottom: 30px;
+      background-color: #ffffff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    th {
+      text-align: left;
+      background-color: #004d74;
+      color: white;
+      padding: 12px;
+      font-size: 1.2em;
+    }
+    td {
+      padding: 12px;
+      vertical-align: top;
+    }
+    ul {
+      margin: 0;
+      padding-left: 20px;
+    }
+  </style>
 </head>
 <body>
+
   <h1>John Elder</h1>
-  <h2>Professor of Finance</h2>
-  <p>Email: john.elder@colostate.edu</p>
-  <p>Department of Finance & Real Estate<br>
-     Colorado State University<br>
-     1272 Campus Delivery<br>
-     Fort Collins, CO 80523-1272</p>
+  <h2>Professor of Finance – Colorado State University</h2>
 
-  <h3>About</h3>
-  <p>John Elder is a Professor of Finance at Colorado State University. His research is available on Google Scholar. He has served in editorial roles at several journals and worked with investment managers and credentialing organizations for over 20 years.</p>
+  <table>
+    <th>Contact Info</th>
+    <tr>
+      <td>Email:</td>
+      <td>john.elder@colostate.edu</td>
+    </tr>
+    <tr>
+      <td>Department:</td>
+      <td>Finance & Real Estate</td>
+    </tr>
+    <tr>
+      <td>Campus Address:</td>
+      <td>1272 Campus Delivery, Fort Collins, CO 80523-1272</td>
+    </tr>
+  </table>
 
-  <h3>Education & Credentials</h3>
-  <ul>
-    <li>PhD in Financial Economics, University of Virginia</li>
-    <li>CFA Charterholder</li>
-    <li>FRM Designation</li>
-  </ul>
+  <table>
+    <th>About</th>
+    <tr>
+      <td colspan="2">
+        John Elder is a Professor of Finance at Colorado State University. His research is available on Google Scholar. He has served in editorial roles at several journals and worked with investment managers and credentialing organizations for over 20 years.
+      </td>
+    </tr>
+  </table>
 
-  <h3>Awards</h3>
-  <ul>
-    <li>College UG Teaching Award (2021)</li>
-    <li>College Service Award (2016)</li>
-    <li>College Research Award (2012)</li>
-    <li>Springer Editorial Distinction Awards (2025)</li>
-    <li>Dean's Scholar (multiple years)</li>
-  </ul>
+  <table>
+    <th>Education & Credentials</th>
+    <tr>
+      <td colspan="2">
+        <ul>
+          <li>PhD in Financial Economics – University of Virginia</li>
+          <li>CFA Charterholder</li>
+          <li>FRM Designation</li>
+        </ul>
+      </td>
+    </tr>
+  </table>
 
-  <h3>Selected Research</h3>
-  <ul>
-    <li>Corporate Governance and Liquidity – JFQA, 2010</li>
-    <li>Liquidity and Information Flow – JMCB, 2013</li>
-    <li>Oil Price Uncertainty – JMCB, 2010</li>
-    <li>Flexible Bivariate Count Models – JBES, 2012</li>
-    <li>Inflation Uncertainty – JMCB, 2004</li>
-  </ul>
+  <table>
+    <th>Awards</th>
+    <tr>
+      <td colspan="2">
+        <ul>
+          <li>College UG Teaching Award (2021)</li>
+          <li>College Service Award (2016)</li>
+          <li>College Research Award (2012)</li>
+          <li>Springer Editorial Distinction Awards (2025)</li>
+          <li>Dean's Scholar (multiple years)</li>
+        </ul>
+      </td>
+    </tr>
+  </table>
 
-  <h3>Course & Resource Links</h3>
-  <ul>
-    <li>Resources for R</li>
-    <li>Student Managed Funds</li>
-    <li>CFA Institute & Denver Chapter</li>
-    <li>Financial Risk Manager (GARP)</li>
-    <li>CFP Board</li>
-  </ul>
+  <table>
+    <th>Selected Research</th>
+    <tr>
+      <td colspan="2">
+        <ul>
+          <li>Corporate Governance and Liquidity – JFQA, 2010</li>
+          <li>Liquidity and Information Flow – JMCB, 2013</li>
+          <li>Oil Price Uncertainty – JMCB, 2010</li>
+          <li>Flexible Bivariate Count Models – JBES, 2012</li>
+          <li>Inflation Uncertainty – JMCB, 2004</li>
+        </ul>
+      </td>
+    </tr>
+  </table>
 
-  <h3>Other Interests</h3>
-  <ul>
-    <li>Colorado Master Swimming</li>
-    <li>14ers.org</li>
-    <li>Motorcycles: BMW R1200 GS, Honda CB1100F</li>
-    <li>Nature Conservancy</li>
-  </ul>
+  <table>
+    <th>Course & Resource Links</th>
+    <tr>
+      <td colspan="2">
+        <ul>
+          <li>Resources for R</li>
+          <li>Student Managed Funds</li>
+          <li>CFA Institute & Denver Chapter</li>
+          <li>Financial Risk Manager (GARP)</li>
+          <li>CFP Board</li>
+        </ul>
+      </td>
+    </tr>
+  </table>
 
-  <footer>
-    <p><em>Disclaimer: Views expressed are those of the author and not Colorado State University.</em></p>
-  </footer>
+  <table>
+    <th>Other Interests</th>
+    <tr>
+      <td colspan="2">
+        <ul>
+          <li>Colorado Master Swimming</li>
+          <li>14ers.org</li>
+          <li>Motorcycles: BMW R1200 GS, Honda CB1100F</li>
+          <li>Nature Conservancy</li>
+        </ul>
+      </td>
+    </tr>
+  </table>
+
+  <p><em>Disclaimer: Views expressed are those of the author and not Colorado State University.</em></p>
+
 </body>
 </html>
