--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     body {
       font-family: Arial, sans-serif;
       margin: 40px;
-      background-color: #f8f8f8;
+      background-color: #f4f4f4;
     }
     table {
-      width: 80%;
+      width: 85%;
       border-collapse: collapse;
       margin-bottom: 30px;
       background-color: #ffffff;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
     th {
-      text-align: left;
       background-color: #004d74;
-      color: white;
+      color: #fff;
+      text-align: left;
       padding: 12px;
       font-size: 1.2em;
     }
@@ -31,6 +31,13 @@
       margin: 0;
       padding-left: 20px;
     }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -39,17 +46,17 @@
   <h2>Professor of Finance – Colorado State University</h2>
 
   <table>
-    <th>Contact Info</th>
+    <th>Contact Information</th>
     <tr>
       <td>Email:</td>
-      <td>john.elder@colostate.edu</td>
+      <td><a href="mailto:john.elder@colostate.edu">john.elder@colostate.edu</a></td>
     </tr>
     <tr>
       <td>Department:</td>
       <td>Finance & Real Estate</td>
     </tr>
     <tr>
-      <td>Campus Address:</td>
+      <td>Mailing Address:</td>
       <td>1272 Campus Delivery, Fort Collins, CO 80523-1272</td>
     </tr>
   </table>
@@ -58,7 +65,7 @@
     <th>About</th>
     <tr>
       <td colspan="2">
-        John Elder is a Professor of Finance at Colorado State University. His research is available on Google Scholar. He has served in editorial roles at several journals and worked with investment managers and credentialing organizations for over 20 years.
+        John Elder is a Professor of Finance at Colorado State University. His research can be viewed via <a href="https://scholar.google.com/citations?user=TpPtBhgAAAAJ" target="_blank">Google Scholar</a>. He has contributed to editorial boards across several finance journals, and consulted extensively with investment firms and credentialing organizations for over two decades.
       </td>
     </tr>
   </table>
@@ -69,8 +76,8 @@
       <td colspan="2">
         <ul>
           <li>PhD in Financial Economics – University of Virginia</li>
-          <li>CFA Charterholder</li>
-          <li>FRM Designation</li>
+          <li><a href="https://www.cfainstitute.org/" target="_blank">CFA Charterholder</a></li>
+          <li><a href="https://www.garp.org/" target="_blank">FRM (Financial Risk Manager) Designation</a></li>
         </ul>
       </td>
     </tr>
@@ -81,7 +88,7 @@
     <tr>
       <td colspan="2">
         <ul>
-          <li>College UG Teaching Award (2021)</li>
+          <li>College Undergraduate Teaching Award (2021)</li>
           <li>College Service Award (2016)</li>
           <li>College Research Award (2012)</li>
           <li>Springer Editorial Distinction Awards (2025)</li>
@@ -111,11 +118,11 @@
     <tr>
       <td colspan="2">
         <ul>
-          <li>Resources for R</li>
-          <li>Student Managed Funds</li>
-          <li>CFA Institute & Denver Chapter</li>
-          <li>Financial Risk Manager (GARP)</li>
-          <li>CFP Board</li>
+          <li><a href="https://cran.r-project.org/" target="_blank">Resources for R</a></li>
+          <li><a href="https://biz.colostate.edu/smf" target="_blank">Student Managed Funds at CSU</a></li>
+          <li><a href="https://www.cfainstitute.org/en/societies/denver" target="_blank">CFA Institute – Denver Chapter</a></li>
+          <li><a href="https://www.garp.org/" target="_blank">GARP – Financial Risk Manager</a></li>
+          <li><a href="https://www.cfp.net/" target="_blank">CFP Board</a></li>
         </ul>
       </td>
     </tr>
@@ -126,10 +133,10 @@
     <tr>
       <td colspan="2">
         <ul>
-          <li>Colorado Master Swimming</li>
-          <li>14ers.org</li>
+          <li><a href="https://www.comasterswim.org/" target="_blank">Colorado Master Swimming</a></li>
+          <li><a href="https://www.14ers.org/" target="_blank">14ers.org – Hiking Colorado's Peaks</a></li>
           <li>Motorcycles: BMW R1200 GS, Honda CB1100F</li>
-          <li>Nature Conservancy</li>
+          <li><a href="https://www.nature.org/" target="_blank">The Nature Conservancy</a></li>
         </ul>
       </td>
     </tr>
