--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 40px;
       background-color: #f4f4f4;
+      margin: 40px;
     }
     table {
       width: 85%;
       border-collapse: collapse;
       margin-bottom: 30px;
-      background-color: #ffffff;
+      background-color: #fff;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
     th {
       background-color: #004d74;
-      color: #fff;
+      color: white;
       text-align: left;
       padding: 12px;
       font-size: 1.2em;
@@ -56,7 +56,7 @@
       <td>Finance & Real Estate</td>
     </tr>
     <tr>
-      <td>Mailing Address:</td>
+      <td>Campus Delivery:</td>
       <td>1272 Campus Delivery, Fort Collins, CO 80523-1272</td>
     </tr>
   </table>
@@ -65,64 +65,40 @@
     <th>About</th>
     <tr>
       <td colspan="2">
-        John Elder is a Professor of Finance at Colorado State University. His research can be viewed via <a href="https://scholar.google.com/citations?user=TpPtBhgAAAAJ" target="_blank">Google Scholar</a>. He has contributed to editorial boards across several finance journals, and consulted extensively with investment firms and credentialing organizations for over two decades.
+        John Elder is Professor of Finance at Colorado State University. My research can be found at 
+        <a href="https://scholar.google.com/citations?user=TpPtBhgAAAAJ" target="_blank">Google Scholar</a>. 
+        I have served in editorial roles at Journal of Financial Research (Associate Editor), Journal of Economics and Finance (Editor-in-Chief), and Empirical Economics. For more than 20 years, I have worked with large investment managers, credentialing organizations, and other clients. I have previously held administrative positions such as associate dean and department chair; several faculty fellowships (EKS&H, Firstbank, Kemble Family, Daniels Fund); and am honored to have received several awards for teaching, service, research, and editorial service. I completed my PhD with a field in financial economics at the University of Virginia and have held two professional designations: the CFA charter and the FRM designation.
       </td>
     </tr>
   </table>
 
   <table>
-    <th>Education & Credentials</th>
     <tr>
-      <td colspan="2">
-        <ul>
-          <li>PhD in Financial Economics – University of Virginia</li>
-          <li><a href="https://www.cfainstitute.org/" target="_blank">CFA Charterholder</a></li>
-          <li><a href="https://www.garp.org/" target="_blank">FRM (Financial Risk Manager) Designation</a></li>
-        </ul>
-      </td>
+      <th style="width:50%">Awards</th>
+      <th style="width:50%">Course & Resource Links</th>
     </tr>
-  </table>
-
-  <table>
-    <th>Awards</th>
     <tr>
-      <td colspan="2">
+      <td>
         <ul>
-          <li>College Undergraduate Teaching Award (2021)</li>
+          <li>College UG Teaching Award (2021)</li>
           <li>College Service Award (2016)</li>
           <li>College Research Award (2012)</li>
           <li>Springer Editorial Distinction Awards (2025)</li>
-          <li>Dean's Scholar (multiple years)</li>
+          <li>Editorial Service Award for Journal of Economics and Finance (2025)</li>
+          <li>Author Service Award for Journal of Economics and Finance (2025)</li>
+          <li>Editorial Service Award for Empirical Economics (2025)</li>
+          <li>Dean’s Scholar (many years)</li>
         </ul>
       </td>
-    </tr>
-  </table>
-
-  <table>
-    <th>Selected Research</th>
-    <tr>
-      <td colspan="2">
-        <ul>
-          <li>Corporate Governance and Liquidity – JFQA, 2010</li>
-          <li>Liquidity and Information Flow – JMCB, 2013</li>
-          <li>Oil Price Uncertainty – JMCB, 2010</li>
-          <li>Flexible Bivariate Count Models – JBES, 2012</li>
-          <li>Inflation Uncertainty – JMCB, 2004</li>
-        </ul>
-      </td>
-    </tr>
-  </table>
-
-  <table>
-    <th>Course & Resource Links</th>
-    <tr>
-      <td colspan="2">
+      <td>
         <ul>
           <li><a href="https://cran.r-project.org/" target="_blank">Resources for R</a></li>
-          <li><a href="https://biz.colostate.edu/smf" target="_blank">Student Managed Funds at CSU</a></li>
-          <li><a href="https://www.cfainstitute.org/en/societies/denver" target="_blank">CFA Institute – Denver Chapter</a></li>
-          <li><a href="https://www.garp.org/" target="_blank">GARP – Financial Risk Manager</a></li>
-          <li><a href="https://www.cfp.net/" target="_blank">CFP Board</a></li>
+          <li>Econ Update / Earnings Summit</li>
+          <li>Fund Resources – S10 Investments, Derivatives, Student Managed Funds</li>
+          <li><a href="https://biz.colostate.edu/" target="_blank">CSU and College of Business</a> and Bloomberg</li>
+          <li><a href="https://www.cfainstitute.org/en/societies/denver" target="_blank">CFA Institute & Denver Chapter</a></li>
+          <li><a href="https://www.garp.org/" target="_blank">Financial Risk Manager (GARP)</a></li>
+          <li><a href="https://www.cfp.net/" target="_blank">CFP Board (personal financial planning)</a></li>
         </ul>
       </td>
     </tr>
@@ -133,16 +109,6 @@
     <tr>
       <td colspan="2">
         <ul>
+          <li><a href="https://www.14ers.org/" target="_blank">14ers.org</a> and <a href="https://www.14ers.com/" target="_blank">14ers.com</a></li>
           <li><a href="https://www.comasterswim.org/" target="_blank">Colorado Master Swimming</a></li>
-          <li><a href="https://www.14ers.org/" target="_blank">14ers.org – Hiking Colorado's Peaks</a></li>
-          <li>Motorcycles: BMW R1200 GS, Honda CB1100F</li>
-          <li><a href="https://www.nature.org/" target="_blank">The Nature Conservancy</a></li>
-        </ul>
-      </td>
-    </tr>
-  </table>
-
-  <p><em>Disclaimer: Views expressed are those of the author and not Colorado State University.</em></p>
-
-</body>
-</html>
+          <li><a href="https://www.scarletknights.com/sports/mens-swimming-and-diving" target="_blank">Rutgers Swimming
