--- a/index.html
+++ b/index.html
@@ -1,114 +1,211 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>John Elder - Professor of Finance</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      margin: 40px;
-    }
-    table {
-      width: 85%;
-      border-collapse: collapse;
-      margin-bottom: 30px;
-      background-color: #fff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
-    th {
-      background-color: #004d74;
-      color: white;
-      text-align: left;
-      padding: 12px;
-      font-size: 1.2em;
-    }
-    td {
-      padding: 12px;
-      vertical-align: top;
-    }
-    ul {
-      margin: 0;
-      padding-left: 20px;
-    }
-    a {
-      color: #0066cc;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>John Elder – Professor of Finance</title>
 </head>
 <body>
 
-  <h1>John Elder</h1>
-  <h2>Professor of Finance – Colorado State University</h2>
-
-  <table>
-    <th>Contact Information</th>
+  <!-- Header & Contact Info in Two-Column Table -->
+  <table width="100%" border="0" cellspacing="0" cellpadding="4">
     <tr>
-      <td>Email:</td>
-      <td><a href="mailto:john.elder@colostate.edu">john.elder@colostate.edu</a></td>
-    </tr>
-    <tr>
-      <td>Department:</td>
-      <td>Finance & Real Estate</td>
-    </tr>
-    <tr>
-      <td>Campus Delivery:</td>
-      <td>1272 Campus Delivery, Fort Collins, CO 80523-1272</td>
-    </tr>
-  </table>
-
-  <table>
-    <th>About</th>
-    <tr>
-      <td colspan="2">
-        John Elder is Professor of Finance at Colorado State University. My research can be found at 
-        <a href="https://scholar.google.com/citations?user=TpPtBhgAAAAJ" target="_blank">Google Scholar</a>. 
-        I have served in editorial roles at Journal of Financial Research (Associate Editor), Journal of Economics and Finance (Editor-in-Chief), and Empirical Economics. For more than 20 years, I have worked with large investment managers, credentialing organizations, and other clients. I have previously held administrative positions such as associate dean and department chair; several faculty fellowships (EKS&H, Firstbank, Kemble Family, Daniels Fund); and am honored to have received several awards for teaching, service, research, and editorial service. I completed my PhD with a field in financial economics at the University of Virginia and have held two professional designations: the CFA charter and the FRM designation.
+      <td valign="top">
+        <h1>John Elder</h1>
+        <h2>Professor of Finance</h2>
+      </td>
+      <td valign="top">
+        <p>
+          Email: <a href="mailto:john.elder@colostate.edu">john.elder@colostate.edu</a><br>
+          Dept of Finance &amp; Real Estate<br>
+          Colorado State University<br>
+          1272 Campus Delivery<br>
+          Fort Collins, CO 80523-1272
+        </p>
       </td>
     </tr>
   </table>
 
-  <table>
-    <tr>
-      <th style="width:50%">Awards</th>
-      <th style="width:50%">Course & Resource Links</th>
-    </tr>
-    <tr>
-      <td>
-        <ul>
-          <li>College UG Teaching Award (2021)</li>
-          <li>College Service Award (2016)</li>
-          <li>College Research Award (2012)</li>
-          <li>Springer Editorial Distinction Awards (2025)</li>
-          <li>Editorial Service Award for Journal of Economics and Finance (2025)</li>
-          <li>Author Service Award for Journal of Economics and Finance (2025)</li>
-          <li>Editorial Service Award for Empirical Economics (2025)</li>
-          <li>Dean’s Scholar (many years)</li>
-        </ul>
-      </td>
-      <td>
-        <ul>
-          <li><a href="https://cran.r-project.org/" target="_blank">Resources for R</a></li>
-          <li>Econ Update / Earnings Summit</li>
-          <li>Fund Resources – S10 Investments, Derivatives, Student Managed Funds</li>
-          <li><a href="https://biz.colostate.edu/" target="_blank">CSU and College of Business</a> and Bloomberg</li>
-          <li><a href="https://www.cfainstitute.org/en/societies/denver" target="_blank">CFA Institute & Denver Chapter</a></li>
-          <li><a href="https://www.garp.org/" target="_blank">Financial Risk Manager (GARP)</a></li>
-          <li><a href="https://www.cfp.net/" target="_blank">CFP Board (personal financial planning)</a></li>
-        </ul>
-      </td>
-    </tr>
-  </table>
+  <!-- Bio Paragraph -->
+  <p>
+    John Elder is Professor of Finance at Colorado State University. My research
+    can be found at <a href="https://scholar.google.com/citations?user=XXXXX">Google Scholar</a>.
+    I have served in editorial roles at Journal of Financial Research (Associate
+    Editor), Journal of Economics and Finance (Editor-in-Chief) and Empirical
+    Economics, and, for more than 20 years, have worked with large investment
+    managers, credentialing organizations and other clients. I have previously
+    held administrative positions such as associate dean and department chair;
+    several faculty fellowships (EKS&H, Firstbank, Kemble Family, Daniels Fund);
+    and am honored to have received several awards for teaching, service,
+    research and editorial service. I completed my PhD with a field in financial
+    economics at the University of Virginia and have held two professional
+    designations, the CFA charter and the FRM designation.
+  </p>
 
-  <table>
-    <th>Other Interests</th>
-    <tr>
-      <td colspan="2">
-        <ul>
-          <li><a href="https://www.14ers.org/" target="_blank">14ers.org</a> and <a href="https://www.14ers.com/" target="_blank">14ers.com</a></li>
-          <li><a href="https://www.comasterswim.org/" target="_blank">Colorado Master Swimming</a></li>
-          <li><a href="https://www.scarletknights.com/sports/mens-swimming-and-diving" target="_blank">Rutgers Swimming
+  <hr>
+
+  <!-- Course Related Links -->
+  <h3>Course Related Links</h3>
+  <ul>
+    <li><a href="#">Resources for R</a></li>
+    <li><a href="#">Econ Update / Earnings Summit</a></li>
+    <li><a href="#">Fund Resources – S10</a></li>
+    <li><a href="#">Investments, Derivatives, Student Managed Funds</a></li>
+    <li><a href="https://www.colostate.edu/college-of-business-and-bloomberg">CSU and College of Business and Bloomberg</a></li>
+    <li><a href="https://www.cfainstitute.org/en/chapter-links">CFA Institute and Denver Chapter</a></li>
+    <li><a href="https://www.garp.org/#!/home">Financial Risk Manager (GARP)</a></li>
+    <li><a href="https://www.cfp.net/">CFP Board (personal financial planning)</a></li>
+  </ul>
+
+  <!-- Award Summaries -->
+  <h3>Other Information (Award Summaries)</h3>
+  <ul>
+    <li>College UG Teaching Award (2021)</li>
+    <li>College Service Award (2016)</li>
+    <li>College Research Award (2012)</li>
+    <li>Springer Editorial Distinction Awards (2025)</li>
+    <li>Editorial Service Award for J of Economics and Finance (2025)</li>
+    <li>Author Service Award for J of Economics and Finance (2025)</li>
+    <li>Editorial Service Award for Empirical Economics (2025)</li>
+    <li>Dean’s Scholar (many years)</li>
+  </ul>
+
+  <hr>
+
+  <!-- Research Section -->
+  <h3>Research</h3>
+  <p>
+    (see <a href="https://papers.ssrn.com/">Google SSRN</a> for working papers or complete list)
+  </p>
+
+  <h4>Selected Research</h4>
+
+  <h5>Monetary Policy</h5>
+  <ul>
+    <li>
+      Liquidity and Information Flow Around Monetary Policy Announcements
+      (with Kee Chung &amp; J.C. Kim), Journal of Money, Credit and Banking, 45:5, 2013
+      [<a href="#">SSRN</a>] [<a href="#">PDF</a>]
+    </li>
+    <li>
+      Another Perspective on the Effects of Inflation Uncertainty,
+      Journal of Money, Credit and Banking, 36:5, 911-28, 2004
+      [<a href="#">PDF</a>]
+    </li>
+  </ul>
+
+  <h5>Corporate Finance</h5>
+  <ul>
+    <li>
+      Corporate Governance and Liquidity (with K. Chung &amp; J.C. Kim),
+      Journal of Financial and Quantitative Analysis, April 2010
+      [<a href="#">PDF</a>]
+    </li>
+    <li>
+      Do Tracking Stocks Reduce Informational Asymmetries? An Analysis of
+      Liquidity and Adverse Selection (with P.K. Jain &amp; J.C. Kim),
+      Journal of Financial Research, 2005 [<a href="#">PDF</a>]
+    </li>
+    <li>
+      The Reaction of Security Prices to Tracking Stock Announcements
+      (with P. Westra), Journal of Economics and Finance, 24, 36-55, 2000
+      [<a href="#">PDF</a>]
+    </li>
+  </ul>
+
+  <h5>Uncertainty</h5>
+  <ul>
+    <li>
+      Oil Price Uncertainty (with A. Serletis),
+      Journal of Money, Credit and Banking, 42:6, 1137-1159, 2010
+      [<a href="#">PDF - SSRN</a>] [<a href="#">RATS prog</a>]
+    </li>
+    <li>
+      Oil Volatility and the Option Value of Waiting: An analysis of the G-7
+      (with D. Bredin &amp; S. Fountas),
+      Journal of Futures Markets, 2011 [<a href="#">PDF - SSRN</a>]
+    </li>
+    <li>
+      Impact of Macroeconomic News on Metal Futures
+      (with H. Miao &amp; S. Ramchander),
+      Journal of Banking and Finance, 2012 [<a href="#">PDF</a>]
+    </li>
+    <li>
+      Oil volatility and real options: 35 years of evidence,
+      Journal of Futures Markets 39(12), 1549-1564, 2019 [<a href="#">Data</a>]
+    </li>
+  </ul>
+
+  <h5>Asset Pricing</h5>
+  <ul>
+    <li>
+      Fractional difference in discrete time (with H. Miao &amp; R. Elliott),
+      Quantitative Finance, 2012 [<a href="#">PDF</a>]
+    </li>
+    <li>
+      Long Memory in Commodity Futures Volatility: A Wavelet Perspective
+      (with H. Jin), Journal of Futures Markets, May 2007 [<a href="#">PDF</a>]
+    </li>
+    <li>
+      Long Memory in Energy Futures Prices (with A. Serletis),
+      Review of Financial Economics, 17:2, 146-155, 2008 [<a href="#">PDF</a>]
+    </li>
+  </ul>
+
+  <h5>Econometric Methods</h5>
+  <ul>
+    <li>
+      Flexible Bivariate Count Data Regression Models
+      (with Shif Gurmu), Journal of Business and Economic Statistics, 30:2, 265-274, 2012
+      [<a href="#">PDF</a>] [<a href="#">Gauss Prog</a>]
+    </li>
+    <li>
+      A Bivariate Zero-inflated Count Data Regression Model
+      (with S. Gurmu), Economics Letters, 100:2, 245-248, 2008 [<a href="#">Gauss Prog</a>]
+    </li>
+    <li>
+      An Impulse-Response Function for a Vector Autoregression with
+      Multivariate-GARCH-in-Mean, Economics Letters, 79:1, 21-26, 2003
+      [<a href="#">PDF</a>]
+    </li>
+    <li>
+      F versus t tests for Unit Roots (with Peter E. Kennedy),
+      Economics Bulletin, 3:3, 1-6, 2001 [<a href="#">PDF</a>]
+    </li>
+    <li>
+      Testing for Unit Roots: What Should Students be Taught?
+      (with Peter E. Kennedy), Journal of Economic Education, 32:2, 137-146, 2001
+      [<a href="#">PDF</a>]
+    </li>
+  </ul>
+
+  <hr>
+
+  <!-- Other Links of Interest -->
+  <h3>Other Links of Interest</h3>
+  <ul>
+    <li><a href="http://14ers.org">14ers.org</a> &amp; <a href="http://14ers.com">14ers.com</a></li>
+    <li><a href="http://www.coloradomasterofswimming.org">Colorado Master Swimming</a></li>
+    <li><a href="http://rutgersswim.org">Rutgers Swimming - men’s team</a></li>
+    <li><a href="http://charlottesville10miler.com">Charlottesville 10 miler</a></li>
+    <li><a href="https://www.coppercolorado.com">Copper Mountain</a></li>
+    <li><a href="https://www.vail.com">Vail</a> &amp; <a href="https://www.steamboatresort.com">Steamboat Resort</a></li>
+    <li>2005 BMW R1200 GS • 1992 BMW K100 RS • 1983 Honda CB1100F • 1979 Honda CB750F</li>
+    <li><a href="https://www.nature.org">Nature Conservancy</a></li>
+    <li><a href="https://portal.office.com">MS Office</a></li>
+  </ul>
+
+  <hr>
+
+  <!-- Disclaimer -->
+  <p>
+    Disclaimer: Colorado State makes no warranties, either expressed or implied,
+    concerning the accuracy, completeness, reliability, or suitability of the
+    information on this web page. Nor does Colorado State warrant the use of the
+    works is free of any claims of copyright infringement. All views expressed
+    are those of the page author and not of Colorado State University, and any
+    concerns or comments about these pages should be directed to the page author,
+    and not to Colorado State University.
+  </p>
+
+</body>
+</html>
